# sapience

./: Cargo.toml  LICENSE  README.md  memo.md
ruler/src/: equality.rs  lib.rs  synth.rs
ruler/src/enumo/: mod.rs  ruleset.rs
src/: ast_node.rs  beam.rs  co_occurrence.rs  dfta.rs  lang.rs  learn.rs  learner.rs  lib.rs  main.rs  rewrites.rs  sexp.rs  teachable.rs
src/ast_node/: expr.rs  partial_expr.rs  pretty.rs
tests/: max.sap  test1.sap  test2.sap  test3.sap
tests/babble/cogsci/: train.bab
