[package]
name = "sapience"
description = "Library learning with automated rule deduction"
version = "0.1.0"
authors = ["Kanghee Park <kpark247@wisc.edu>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
egg = "0.9.1"
nom = "7.1.1"
rsmt2 = "0.16.2"
thiserror = "1.0.37"
