[package]
name = "sapience"
description = "Library learning with automated rule deduction"
version = "0.1.0"
authors = ["Kanghee Park <kpark247@wisc.edu>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.26", features = ["derive"] }
csv = "1.1.6"
egg = "0.9.1"
itertools = "0.10.5"
log = "0.4.17"
nom = "7.1.1"
rsmt2 = "0.16.2"
serde = { version = "1.0.147", features = ["derive"] }
thiserror = "1.0.37"
